# RustMultiForecast

./: Cargo.toml  log4rs.yaml
migrations/2022-11-28-064751_create_users/: down.sql  up.sql
migrations/2022-11-29-144733_create_forecast/: down.sql  up.sql
migrations/2022-11-30-122814_create_field_prefs/: down.sql  up.sql
migrations/2023-02-17-183123_add_notification_time/: down.sql  up.sql
src/: enums.rs  main.rs  models.rs  schema.rs  service.rs  telegram.rs
src/service/: command.rs  location.rs  notification.rs  preferences.rs  service.rs  weather.rs
src/telegram/: bot.rs  enums.rs  model.rs
